// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HoverMenuSimpleExample renders color 1`] = `
<DocumentFragment>
  <div
    class="relative inline-block text-left"
  >
    Show: false
    <br />
    <div>
      <button
        aria-expanded="false"
        aria-haspopup="true"
        aria-label="Select Color"
        class=" inline-flex  w-full  justify-center rounded-md  bg-black  bg-opacity-20  px-4 py-2 text-sm  font-medium  text-white  hover:bg-opacity-30                 focus-visible:ring-2 focus-visible:ring-white focus-visible:ring-opacity-75 "
        id="headlessui-menu-button-1"
        type="button"
      >
        <div>
          Green
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`HoverMenuSimpleExample renders color 2`] = `
<DocumentFragment>
  <div
    class="relative inline-block text-left"
  >
    Show: false
    <br />
    <div>
      <button
        aria-controls="headlessui-menu-items-3"
        aria-expanded="false"
        aria-haspopup="true"
        aria-label="Select Color"
        class=" inline-flex  w-full  justify-center rounded-md  bg-black  bg-opacity-20  px-4 py-2 text-sm  font-medium  text-white  hover:bg-opacity-30                 focus-visible:ring-2 focus-visible:ring-white focus-visible:ring-opacity-75 "
        id="headlessui-menu-button-1"
        type="button"
      >
        <div>
          Red
        </div>
      </button>
    </div>
    <div
      aria-activedescendant="headlessui-menu-item-4"
      aria-labelledby="headlessui-menu-button-1"
      class="absolute right-0 z-10 mt-2 w-64 origin-top-right divide-y divide-gray-100 rounded-md bg-white shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none transition ease-in duration-75 transform opacity-100 scale-100"
      id="headlessui-menu-items-3"
      role="menu"
      tabindex="0"
    >
      <div
        class="px-1 py-1 "
      >
        <button
          class="
              group 
              flex 
              w-full 
              items-center 
              rounded-md 
              px-2 
              py-2 text-sm 
              focus:outline-none focus-visible:outline-none
             bg-violet-500 text-white"
          id="headlessui-menu-item-4"
          role="menuitem"
          tabindex="-1"
        >
          <div>
            Green: false
          </div>
        </button>
        <button
          class="
              group 
              flex 
              w-full 
              items-center 
              rounded-md 
              px-2 
              py-2 text-sm 
              focus:outline-none focus-visible:outline-none
             text-gray-900"
          id="headlessui-menu-item-5"
          role="menuitem"
          tabindex="-1"
        >
          <div>
            Yellow: false
          </div>
        </button>
        <button
          class="
              group 
              flex 
              w-full 
              items-center 
              rounded-md 
              px-2 
              py-2 text-sm 
              focus:outline-none focus-visible:outline-none
             text-gray-900"
          id="headlessui-menu-item-6"
          role="menuitem"
          tabindex="-1"
        >
          <div>
            Red: false
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
